[package]
name = "ipfs-embed-ipfs-camp-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
ipfs-embed = { version = "0.24.0", features = ["tokio", "compat"] }
libipld = "0.14.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
